# learn-opengl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  vcpkg.json
notes/: libraries.txt  log.txt
src/: main.cpp
